--- a/manifest.json
+++ b/manifest.json
@@ -28,7 +28,7 @@
       }],
     "lang": "en-UK",
     "start_url": "/index.html",
-
+    "scope": "/pwa/",
     "display": "standalone",
     "background_color": "white",
     "theme_color": "white"
