--- a/manifest.json
+++ b/manifest.json
@@ -27,7 +27,7 @@
         "type": "image/png"
       }],
     "lang": "en-UK",
-    "start_url": "/index.html",
+    "start_url": "/pwa/index.html",
     "scope": "/pwa/",
     "display": "standalone",
     "background_color": "white",
