--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Chirstopher Barrett",
+    "name": "Christopher Barrett",
     "short_name": "CB",
     "icons": [{
       "src": "images/CB-128.png",
